--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_purple">#514eb7</color>
     <color name="border_ggfb">#fefefe</color>
+    <color name="com_facebook_button_send_background_color_pressed">#4267B2</color>
+    <color name="red">#FF0000</color>
+
 </resources>
