--- a/app/src/main/res/layout/fragment_home_user.xml
+++ b/app/src/main/res/layout/fragment_home_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".HomeFragment" >
+    tools:context=".HomeUser" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/hiName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hi, Jonathan"
@@ -42,7 +42,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/btSearch"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_marginEnd="16dp"
