--- a/app/src/main/res/layout/fragment_home_user.xml
+++ b/app/src/main/res/layout/fragment_home_user.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/test"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:text="Test"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
