--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/result_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchResult"
-    android:orientation="vertical"
-    android:layout_marginHorizontal="24dp">
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginStart="12dp"
         android:id="@+id/rc_result_product"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
