--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="list_item_spacing_half">8dp</dimen>
     <dimen name="w">160dp</dimen>
     <dimen name="h">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
