--- a/app/src/main/res/layout/activity_book_jewelry_detail.xml
+++ b/app/src/main/res/layout/activity_book_jewelry_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".DetailBagElectronicActivity">
+    tools:context=".DetailBookJewelryActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -76,7 +76,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -282,7 +282,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/add1"
+                        android:id="@+id/textView12"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         android:layout_marginEnd="10dp"
@@ -295,19 +295,19 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/count"
+                        android:id="@+id/textView14"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/add1"
-                        app:layout_constraintEnd_toEndOf="@+id/add1"
-                        app:layout_constraintStart_toStartOf="@+id/sub1"
-                        app:layout_constraintTop_toTopOf="@+id/add1" />
+                        app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                        app:layout_constraintEnd_toEndOf="@+id/textView12"
+                        app:layout_constraintStart_toStartOf="@+id/textView15"
+                        app:layout_constraintTop_toTopOf="@+id/textView12" />
 
                     <TextView
-                        android:id="@+id/sub1"
+                        android:id="@+id/textView15"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         android:layout_marginStart="10dp"
@@ -335,8 +335,6 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginTop="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:orientation="horizontal">
@@ -384,7 +382,6 @@
                     android:id="@+id/btn_addtoCart"
                     android:layout_width="180dp"
                     android:layout_height="60dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
                     android:text="Add to Cart"
