--- a/app/src/main/res/layout/activity_seeall_arrival.xml
+++ b/app/src/main/res/layout/activity_seeall_arrival.xml
@@ -42,7 +42,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/viewArrifals"
+        android:id="@+id/viewArrivals"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="8dp"
