--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,7 @@
 
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/btnSeeAll1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
@@ -139,7 +139,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/btnSeeAll2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="0dp"
