--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,7 +28,7 @@
         android:text="Start learning with create your account" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv9"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
@@ -64,7 +64,7 @@
 
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/btnSeeAll1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
