--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -2,8 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_category"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="110dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
     android:background="@drawable/background_new_arrival_item"
     tools:context=".model.Category">
 
@@ -15,43 +18,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/clothes_category" />
+        app:srcCompat="@drawable/book_category" />
 
     <TextView
         android:id="@+id/category_name"
         android:layout_width="130dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
         android:text="Clothes"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/category_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/category_numProduct"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="40dp"
-        android:text="123"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_name" />
 
-    <TextView
-        android:layout_width="80dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="40dp"
-        android:text="Product"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/category_numProduct"
-        app:layout_constraintTop_toBottomOf="@+id/category_name" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
