--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_product"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="160dp"
     android:layout_marginTop="12dp"
@@ -48,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="product"
+        android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="16sp"
