--- a/app/src/main/res/layout/activity_one_attribute_detail.xml
+++ b/app/src/main/res/layout/activity_one_attribute_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".DetailClothesSneakerActivity">
+    tools:context=".DetailOneAttributeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/shoes2" />
+            app:srcCompat="@drawable/bag2" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -108,8 +108,8 @@
 
                     <TextView
                         android:id="@+id/product_name"
-                        android:layout_width="250dp"
-                        android:layout_height="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="18dp"
                         android:text="product name"
                         android:textColor="@color/black"
@@ -167,7 +167,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/btnCong"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginEnd="10dp"
@@ -180,19 +180,19 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/textView14"
+                            android:id="@+id/productCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="1"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                            app:layout_constraintEnd_toEndOf="@+id/textView12"
-                            app:layout_constraintStart_toStartOf="@+id/textView15"
-                            app:layout_constraintTop_toTopOf="@+id/textView12" />
+                            app:layout_constraintBottom_toBottomOf="@+id/btnCong"
+                            app:layout_constraintEnd_toEndOf="@+id/btnCong"
+                            app:layout_constraintStart_toStartOf="@+id/btnTru"
+                            app:layout_constraintTop_toTopOf="@+id/btnCong" />
 
                         <TextView
-                            android:id="@+id/textView15"
+                            android:id="@+id/btnTru"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginStart="10dp"
@@ -325,29 +325,6 @@
                         android:layout_height="25dp"
                         android:layout_marginStart="18dp"
                         android:text="Color: "
-                        android:gravity="center"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_height="match_parent" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="25dp"
-                        android:layout_marginStart="18dp"
-                        android:text="Size:   "
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textSize="18sp"
