--- a/app/src/main/res/layout/bottom_sheet_checkout.xml
+++ b/app/src/main/res/layout/bottom_sheet_checkout.xml
@@ -36,7 +36,7 @@
         >
         <TextView
             android:layout_marginTop="12dp"
-            android:id="@+id/textView12"
+            android:id="@+id/btnCong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Subtotal"
@@ -93,7 +93,7 @@
         android:layout_marginVertical="12dp"
         >
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/productCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total amount"
