--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -30,6 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/product_name"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="product name"
             android:textStyle="bold"
             android:textSize="20dp"/>
@@ -46,7 +48,7 @@
             android:columnCount="2"
             >
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/btnCong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Color: "
