--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -49,6 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="product"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/black"
