--- a/app/src/main/res/layout/activity_shop_page.xml
+++ b/app/src/main/res/layout/activity_shop_page.xml
@@ -39,7 +39,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:paddingEnd="26dp"
-                    android:text="New arrival"
+                    android:text="Shop Profile"
                     android:textSize="18sp" />
             </LinearLayout>
 
