--- a/app/src/main/res/layout/fragment_home_home.xml
+++ b/app/src/main/res/layout/fragment_home_home.xml
@@ -77,15 +77,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="310dp">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/viewArrivals"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="310dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/viewArrivals"
+                        android:visibility="invisible"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_marginTop="8dp" />
+                    <ProgressBar
+                        android:id="@+id/pbNewArrive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+                    </ProgressBar>
+                </FrameLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
