--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -40,8 +40,11 @@
     android:layout_height="wrap_content"
     android:layout_gravity=""
     >
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <GridLayout
-
+            android:id="@+id/twoAttribute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:rowCount="2"
@@ -56,15 +59,11 @@
                 android:layout_gravity="left"
                 android:textColor="@color/grey_font"
                 />
-            <TextView
-
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/color"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="99"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                tools:ignore="RtlHardcoded" />
+                android:layout_width="16dp"
+                android:layout_height="20dp"
+                android:src="@color/black"/>
 
             <TextView
                 android:id="@+id/textView13"
@@ -83,6 +82,43 @@
                 android:text="10"
                 android:textStyle="bold"/>
         </GridLayout>
+        <GridLayout
+            android:visibility="invisible"
+            android:id="@+id/oneAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            >
+            <TextView
+                android:id="@+id/key"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Color: "
+                android:textSize="16dp"
+                android:layout_gravity="left"
+                android:textColor="@color/grey_font"
+                />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/valueSize"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="99"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlHardcoded" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/valueColor"
+                    android:layout_width="16dp"
+                    android:layout_height="20dp"
+                    android:src="@color/black"/>
+            </FrameLayout>
+
+
+        </GridLayout>
+    </FrameLayout>
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
