--- a/app/src/main/res/layout/fragment_mycart.xml
+++ b/app/src/main/res/layout/fragment_mycart.xml
@@ -42,19 +42,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                >
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:visibility="invisible"
                         android:id="@+id/rcv_cart_item"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+
                         />
-            </ScrollView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/layout_checkout"
                 android:visibility="invisible"
