--- a/app/src/main/res/layout/shop_cart_item.xml
+++ b/app/src/main/res/layout/shop_cart_item.xml
@@ -14,7 +14,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <CheckBox
                 android:id="@+id/selectAll"
                 android:layout_width="wrap_content"
@@ -22,7 +24,18 @@
                 android:layout_weight="1"
                 android:text="" />
 
+                <ImageView
+                    android:visibility="invisible"
+                    android:id="@+id/iconShop"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:srcCompat="@drawable/icons8_shop_50"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="8dp"
+                    />
+            </FrameLayout>
             <TextView
+                android:layout_gravity="center_vertical"
                 android:id="@+id/shopName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
