--- a/app/src/main/res/layout/fragment_my_order.xml
+++ b/app/src/main/res/layout/fragment_my_order.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="18dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text="My order" />
+        android:text="My Order" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
