--- a/app/src/main/res/layout/fragment_my_order_history.xml
+++ b/app/src/main/res/layout/fragment_my_order_history.xml
@@ -3,17 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyOrderHistoryFragment">
+    tools:context=".OrderHistoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcHistory"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
 
     <ProgressBar
-        android:id="@+id/progressBar4"
+        android:id="@+id/prgbHistory"
         style="?android:attr/progressBarStyle"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView
+        android:visibility="invisible"
+        android:id="@+id/noOrder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="You have no order in history!"
+        android:layout_gravity="center_vertical"
+        android:textAlignment="center"
+        tools:ignore="RtlCompat"
+        android:textSize="20dp"/>
 </FrameLayout>
