--- a/app/src/main/res/layout/order_product.xml
+++ b/app/src/main/res/layout/order_product.xml
@@ -5,7 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/container">
+    android:id="@+id/container"
+    android:layout_marginVertical="4dp">
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="100dp"
@@ -14,7 +23,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:orientation="vertical"
         >
@@ -135,10 +144,36 @@
                 android:textColor="@color/grey_font"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/complete"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            >
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/rate"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="12dp"
+                android:background="@drawable/button_purple_white"
+                android:text="RATE" />
+
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/reBuy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:textColor="@color/main_purple"
+                android:background="@drawable/button_white_purple"
+                android:text="ADD TO CART AGAIN" />
+        </LinearLayout>
 
     </LinearLayout>
 
+        </LinearLayout>
 
-
-
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
