--- a/app/src/main/res/layout/activity_address_setting.xml
+++ b/app/src/main/res/layout/activity_address_setting.xml
@@ -15,9 +15,9 @@
 
         <ImageView
             android:id="@+id/btBacka"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/back"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_arrow_back_"
             app:layout_constraintStart_toStartOf="@+id/textView24"
             app:layout_constraintTop_toTopOf="parent" />
 
