--- a/app/src/main/res/layout/activity_all_category_product.xml
+++ b/app/src/main/res/layout/activity_all_category_product.xml
@@ -27,7 +27,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_marginEnd="16dp"
-                app:srcCompat="@drawable/back" />
+                app:srcCompat="@drawable/baseline_arrow_back_" />
 
             <TextView
                 android:id="@+id/category_name"
