--- a/app/src/main/res/layout/activity_all_favorite.xml
+++ b/app/src/main/res/layout/activity_all_favorite.xml
@@ -24,7 +24,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_marginEnd="16dp"
-                app:srcCompat="@drawable/back" />
+                app:srcCompat="@drawable/baseline_arrow_back_" />
 
             <TextView
                 android:id="@+id/textView23"
@@ -35,7 +35,8 @@
                 android:textStyle="bold"
                 android:textAlignment="textStart"
                 android:gravity="center"
-                android:text="Favorites" />
+                android:text="Favorites"
+                tools:ignore="RtlCompat" />
 
 
         </LinearLayout>
