--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -17,7 +17,7 @@
             android:id="@+id/btBack"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:src="@drawable/back"
+            android:src="@drawable/baseline_arrow_back_"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
