--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -16,9 +16,9 @@
 
         <ImageView
             android:id="@+id/btBack"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:src="@drawable/back"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_arrow_back_"
             app:layout_constraintStart_toStartOf="@+id/textView24"
             app:layout_constraintTop_toTopOf="parent" />
 
