--- a/app/src/main/res/layout/bottom_sheet_checkout.xml
+++ b/app/src/main/res/layout/bottom_sheet_checkout.xml
@@ -16,6 +16,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -35,7 +36,7 @@
         android:columnCount="2"
         >
         <TextView
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:id="@+id/btnCong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,7 +46,7 @@
             android:textColor="@color/grey_font"
             />
         <TextView
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
 
             android:id="@+id/subTotal"
             android:layout_width="wrap_content"
