--- a/app/src/main/res/layout/fragment_mycart.xml
+++ b/app/src/main/res/layout/fragment_mycart.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MyCart"
     android:layout_marginTop="28dp"
-    android:layout_marginBottom="20dp"
     android:orientation="vertical"
     >
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,7 +52,7 @@
                         />
             <androidx.cardview.widget.CardView
                 android:id="@+id/layout_checkout"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_gravity="right"
